--- a/base.html
+++ b/base.html
@@ -123,7 +123,13 @@
                             </ul>
                         </div>
                         <div class="card-footer text-center">
-                            <button class="btn btn-primary">Select Plan</button>
+                            <button class="btn btn-primary" onclick="redirectToRegistration()">Select Plan</button>
+                            <script>
+                                function redirectToRegistration() {
+                                    // Redirect to the registration page
+                                    window.location.href = '/register';
+                                }
+                            </script>
                         </div>
                     </div>
                 </div>
@@ -141,7 +147,13 @@
                             </ul>
                         </div>
                         <div class="card-footer text-center">
-                            <button class="btn btn-primary">Select Plan</button>
+                            <button class="btn btn-primary" onclick="redirectToRegistration()">Select Plan</button>
+                            <script>
+                                function redirectToRegistration() {
+                                    // Redirect to the registration page
+                                    window.location.href = '/register';
+                                }
+                            </script>
                         </div>
                     </div>
                 </div>
