--- a/thankyou.html
+++ b/thankyou.html
@@ -5,12 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f5f5f5;
+        }
+        .container {
+            text-align: center;
+            padding: 100px;
+        }
+        .tick-mark {
+            width: 100px;
+            height: 100px;
+            margin: 0 auto 20px;
+        }
+        h1 {
+            font-size: 36px;
+            color: #333;
+        }
+        p {
+            font-size: 18px;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="text-center">Thank You for Registering!</h1>
-        <p class="text-center">Your registration has been successfully submitted.</p>
-        <!-- You can add more content or styling as needed -->
+    <div class="container">
+        <img src="https://i.pinimg.com/736x/c7/75/fc/c775fc6d3433da085d8f579f54b7c758.jpg" alt="Tick Mark" class="tick-mark">
+        <h1>Thank You for Registering!</h1>
+        <p>Your registration has been successfully submitted.</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
